--- a/feature.html
+++ b/feature.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,16 +17,19 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
+
 <body>
 
     <!--================Header Menu Area =================-->
-    <header class="header_area">    
+    <header class="header_area">
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -33,150 +37,50 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
-                            <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>     
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="feature.html">Features</a></li> 
-                                    <li class="nav-item"><a class="nav-link" href="price.html">Price</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="element.html">Element</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                </ul>
-                            </li> 
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"><i class="ti-home"></i></a></li>
+                            <li class="nav-item"><a class="nav-link" href="feature.html">Así somos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="">Esto hacemos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Escribenos</a></li>
                         </ul>
                     </div>
-                    <div class="right-button">
-                        <ul>
-                            <li class="shop-icon"><a href="#"><i class="ti-shopping-cart-full"></i><span>0</span></a></li>
-                            <li><a class="sign_up" href="">Sign Up</a></li>
-                        </ul>
-                    </div> 
                 </div>
             </nav>
         </div>
     </header>
     <!--================Header Menu Area =================-->
 
-
     <!--================Hero Banner Area Start =================-->
-    <section class="hero-banner d-flex align-items-center">
-        <div class="container text-center">
-            <h2>Features</h2>
-            <nav aria-label="breadcrumb" class="banner-breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Features</li>
-                </ol>
-            </nav>
+    <section class="hero-banner">
+    </section>
+    <section class="sample-text-area">
+        <div class="container">
+            <h3 class="text-center title_color">Así Somos</h3>
+            <p class="sample-text text-center">
+                Somos una empresa que nació en Colombia con amplia experiencia en la era digital para el desarrollo de
+                software a la medida y de aplicaciones móviles multiplataforma para iOSy Andriod.
+            </p>
+            <br>
+            <p class="sample-text text-center">
+                Contamos con servicios adicionales que cubren áreas indispensables en el crecimiento y formación de
+                negocios
+                exitosos desde la implementación de Sistemas de Gestión, proporcionando soluciones operacionales,
+                financieras y de
+                ingeniería.
+            </p>
+            <br>
+            <p class="sample-text text-center">
+                También implementamos soluciones digitales para que sus productos y servicios tengan una mayor
+                proyección y
+                visibilidad en el mercado. Ideamos estrategias en Marketing Digital, Publicidad, Diseño, Fotografía y
+                Video
+                profesional.
+            </p>
         </div>
     </section>
     <!--================Hero Banner Area End =================-->
 
-    <!--================Service  Area =================-->
-    <section class="service-area area-padding">
-        <div class="container">
-            <div class="row">
-                <!-- Single service -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="single-service">
-                        <div class="service-icon">
-                            <i class="ti-pencil-alt"></i>
-                        </div>
-                        <div class="service-content">
-                            <h5>Unique Design</h5>
-                            <p>Third don't lights wherein was. bring to build them, seas. Thing gathering answ gaered beast third that heaven after all that living one bank limit</p>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Single service -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="single-service">
-                        <div class="service-icon">
-                            <i class="ti-image"></i>
-                        </div>
-                        <div class="service-content">
-                            <h5>Business Solution</h5>
-                            <p>Third don't lights wherein was. bring to build them, seas. Thing gathering answ gaered beast third that heaven after all that living one bank limit</p>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- Single service -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="single-service">
-                        <div class="service-icon">
-                            <i class="ti-headphone-alt"></i>
-                        </div>
-                        <div class="service-content">
-                            <h5>Customer Support</h5>
-                            <p>Third don't lights wherein was. bring to build them, seas. Thing gathering answ gaered beast third that heaven after all that living one bank limit</p>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!--================Service Area end =================-->
-
-
-    <!--================About  Area =================-->
-    <section class="about-area area-padding-bottom">
-        <div class="container">
-            <div class="row align-items-center">
-
-                <div class="col-lg-6">
-                    <div class="area-heading">
-                        <h4>Form Female From<br>Cattle Evening. </h4>
-                        <h6>And appear great open bearing evening dominion vodi </h6>
-
-                        <p>There earth face earth behold. She'd stars made void two given do and also. Our own grass days.  Greater male Shall There faced earth behold She star</p>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-6">
-                            <div class="single-about">
-                                <div class="about-icon">
-                                    <i class="ti-thought"></i>
-                                </div>
-                                <div class="single-about-content">
-                                    <h5>Cloud Compatibility</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-6">
-                            <div class="single-about">
-                                <div class="about-icon">
-                                    <i class="ti-truck"></i>
-                                </div>
-                                <div class="single-about-content">
-                                    <h5>On Time Delivery</h5>
-                                    <p>There earth face earth behold. She stars made void two given and also our own grass days. Greater </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================About Area End =================-->
-
- <!-- ================ start footer Area ================= -->
+    <!-- ================ start footer Area ================= -->
     <footer class="footer-area">
         <div class="container">
             <div class="row">
@@ -193,7 +97,7 @@
                     <h4>Contact Info</h4>
                     <div class="footer-address">
                         <p>Address :Your address goes
-                        here, your demo address.</p>
+                            here, your demo address.</p>
                         <span>Phone : +8880 44338899</span>
                         <span>Email : info@colorlib.com</span>
                     </div>
@@ -212,62 +116,67 @@
 
                 <div class="col-lg-3 col-md-8 mb-4 mb-xl-0 single-footer-widget">
                     <h4>Newsletter</h4>
-                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days open</p>
+                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold bearing days
+                        open</p>
 
                     <div class="form-wrap" id="mc_embed_signup">
-                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                        method="get">
-                        <div class="input-group">
-                            <input type="email" class="form-control" name="EMAIL" placeholder="Your Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '">
-                            <div class="input-group-append">
-                                <button class="btn click-btn" type="submit">
-                                    <i class="fab fa-telegram-plane"></i>
-                                </button>
+                        <form target="_blank"
+                            action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                            method="get">
+                            <div class="input-group">
+                                <input type="email" class="form-control" name="EMAIL" placeholder="Your Email Address"
+                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '">
+                                <div class="input-group-append">
+                                    <button class="btn click-btn" type="submit">
+                                        <i class="fab fa-telegram-plane"></i>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div style="position: absolute; left: -5000px;">
-                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                        </div>
+                            <div style="position: absolute; left: -5000px;">
+                                <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                            </div>
 
-                        <div class="info"></div>
-                    </form>
+                            <div class="info"></div>
+                        </form>
+                    </div>
+
                 </div>
-
+            </div>
+            <div class="footer-bottom row align-items-center text-center text-lg-left no-gutters">
+                <p class="footer-text m-0 col-lg-8 col-md-12">
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+                    made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                        target="_blank">Colorlib</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+                <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
+                    <a href="#"><i class="ti-facebook"></i></a>
+                    <a href="#"><i class="ti-twitter-alt"></i></a>
+                    <a href="#"><i class="ti-dribbble"></i></a>
+                    <a href="#"><i class="ti-linkedin"></i></a>
+                </div>
             </div>
         </div>
-        <div class="footer-bottom row align-items-center text-center text-lg-left no-gutters">
-            <p class="footer-text m-0 col-lg-8 col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-            <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
-                <a href="#"><i class="ti-facebook"></i></a>
-                <a href="#"><i class="ti-twitter-alt"></i></a>
-                <a href="#"><i class="ti-dribbble"></i></a>
-                <a href="#"><i class="ti-linkedin"></i></a>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- ================ End footer Area ================= -->
+    </footer>
+    <!-- ================ End footer Area ================= -->
 
-
-
-
-
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="js/jquery-2.2.4.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-<script src="js/jquery.ajaxchimp.min.js"></script>
-<script src="js/waypoints.min.js"></script>
-<script src="js/mail-script.js"></script>
-<script src="js/contact.js"></script>
-<script src="js/jquery.form.js"></script>
-<script src="js/jquery.validate.min.js"></script>
-<script src="js/mail-script.js"></script>
-<script src="js/theme.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/mail-script.js"></script>
+    <script src="js/contact.js"></script>
+    <script src="js/jquery.form.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/mail-script.js"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/idioma.js"></script>
 </body>
+
 </html>
