Se agrega funcionalidad en pagina principal

--- a/index.html
+++ b/index.html
@@ -78,19 +78,15 @@
             <br>
             <p class="sample-text text-center">
                 Contamos con servicios adicionales que cubren áreas indispensables en el crecimiento y formación de
-                negocios
-                exitosos desde la implementación de Sistemas de Gestión, proporcionando soluciones operacionales,
-                financieras y de
-                ingeniería.
+                negocios exitosos desde la implementación de Sistemas de Gestión, proporcionando soluciones 
+                operacionales, financieras y de ingeniería.
             </p>
             <br>
             <p class="sample-text text-center">
                 También implementamos soluciones digitales para que sus productos y servicios tengan una mayor
-                proyección y
-                visibilidad en el mercado. Ideamos estrategias en Marketing Digital, Publicidad, Diseño, Fotografía y
-                Video
-                profesional.
-            </p>
+                proyección y visibilidad en el mercado. Ideamos estrategias en Marketing Digital, Publicidad, 
+                Diseño, Fotografía y Video profesional.
+            </p>            
         </div>
     </section>
     <!--================Hero Banner Area End =================-->
@@ -105,44 +101,67 @@
                             <i class="ti-desktop"></i>
                         </div>
                         <div class="single-pricing-content">
-
+                            <p class="text-center"> 
+                                Desarrollo de software y páginas web en los lenguajes líderes del mercado actual 
+                                (.Net Core, Python, Angular, Vue.js, etc)  y creación de aplicaciones móviles multiplataforma 
+                                (iOS y Android).
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="single-pricing">
                         <div class="pricing-icon">
-                            <i class="ti-desktop"></i>
+                            <i class="ti-file"></i>
                         </div>
                         <div class="single-pricing-content">
-
+                            <p class="text-center"> 
+                                Implementación de Sistemas de Gestión de Calidad Ambiental, Seguridad y Salud en el 
+                                trabajo, Gestión de Riesgos, Gestión de Seguridad en la Información, entre otros.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="single-pricing">
                         <div class="pricing-icon">
-                            <i class="ti-desktop"></i>
+                            <i class="ti-ink-pen"></i>
                         </div>
                         <div class="single-pricing-content">
-
+                            <p class="text-center"> 
+                                Desarrollo de Software 
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
             <br>
-            <div class="row align-items-center">
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="single-pricing">
-                            <div class="pricing-icon">
-                                <i class="ti-desktop"></i>
-                            </div>
-                            <div class="single-pricing-content">
-                                
-                            </div>
+            <div class="row offset">
+                <div class="col-sm-6 col-lg-4 ">
+                    <div class="single-pricing">
+                        <div class="pricing-icon">
+                            <i class="ti-desktop"></i>
+                        </div>
+                        <div class="single-pricing-content">
+                            <p class="text-center"> 
+                                Desarrollo de Software 
+                            </p>
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6 col-lg-4 ">
+                    <div class="single-pricing">
+                        <div class="pricing-icon">
+                            <i class="ti-desktop"></i>
+                        </div>
+                        <div class="single-pricing-content">
+                            <p class="text-center"> 
+                                Desarrollo de Software 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--================Feature Area End =================-->
